tests/ui/invalid_arg.stderr
error: unexpected token
 --> tests/ui/invalid_arg.rs:5:20
  |
5 |     #[tokio_select(not biased)]
  |                    ^^^
